
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_1__ ;


struct TYPE_6__ {int next; } ;
typedef TYPE_1__ mbedtls_x509_crt ;
typedef int mbedtls_ssl_context ;
typedef int mbedtls_ssl_config ;
typedef int mbedtls_pk_context ;
typedef int mbedtls_net_context ;
typedef int mbedtls_entropy_context ;
typedef int mbedtls_ctr_drbg_context ;
typedef int buf ;


 int MBEDTLS_ERR_SSL_WANT_READ ;
 int MBEDTLS_ERR_SSL_WANT_WRITE ;
 int MBEDTLS_NET_PROTO_TCP ;
 int MBEDTLS_SSL_IS_SERVER ;
 int MBEDTLS_SSL_PRESET_DEFAULT ;
 int MBEDTLS_SSL_TRANSPORT_STREAM ;
 int mbedtls_ctr_drbg_free (int *) ;
 int mbedtls_ctr_drbg_init (int *) ;
 int mbedtls_ctr_drbg_random ;
 int mbedtls_ctr_drbg_seed (int *,int ,int *,unsigned char const*,int ) ;
 int mbedtls_entropy_free (int *) ;
 int mbedtls_entropy_func ;
 int mbedtls_entropy_init (int *) ;
 int mbedtls_net_accept (int *,int *,int *,int ,int *) ;
 int mbedtls_net_bind (int *,int *,char*,int ) ;
 int mbedtls_net_free (int *) ;
 int mbedtls_net_init (int *) ;
 int mbedtls_net_recv ;
 int mbedtls_net_send (int *,unsigned char*,int ) ;
 int mbedtls_pk_free (int *) ;
 int mbedtls_pk_init (int *) ;
 int mbedtls_pk_parse_key (int *,unsigned char const*,int ,int *,int ) ;
 int mbedtls_ssl_close_notify (int *) ;
 int mbedtls_ssl_conf_ca_chain (int *,int ,int *) ;
 int mbedtls_ssl_conf_ciphersuites (int *,int*) ;
 int mbedtls_ssl_conf_own_cert (int *,TYPE_1__*,int *) ;
 int mbedtls_ssl_conf_rng (int *,int ,int *) ;
 int mbedtls_ssl_config_defaults (int *,int ,int ,int ) ;
 int mbedtls_ssl_config_free (int *) ;
 int mbedtls_ssl_config_init (int *) ;
 int mbedtls_ssl_free (int *) ;
 int mbedtls_ssl_get_ciphersuite_id (char*) ;
 int mbedtls_ssl_handshake (int *) ;
 int mbedtls_ssl_init (int *) ;
 int mbedtls_ssl_session_reset (int *) ;
 int mbedtls_ssl_set_bio (int *,int *,int (*) (int *,unsigned char*,int ),int ,int *) ;
 int mbedtls_ssl_setup (int *,int *) ;
 scalar_t__ mbedtls_test_cas_pem ;
 int mbedtls_test_cas_pem_len ;
 scalar_t__ mbedtls_test_srv_crt ;
 int mbedtls_test_srv_crt_len ;
 scalar_t__ mbedtls_test_srv_key ;
 int mbedtls_test_srv_key_len ;
 int mbedtls_x509_crt_free (TYPE_1__*) ;
 int mbedtls_x509_crt_init (TYPE_1__*) ;
 int mbedtls_x509_crt_parse (TYPE_1__*,unsigned char const*,int ) ;
 int sprintf (char*,char*) ;
 int strlen (char const*) ;
 scalar_t__ strncmp (char*,char*,int) ;
 int write_and_get_response (int *,char*,int) ;

int main( void )
{
    int ret;
    mbedtls_net_context listen_fd, client_fd;
    char buf[1024];
    const char *pers = "ssl_server";

    int force_ciphersuite[2];
    mbedtls_entropy_context entropy;
    mbedtls_ctr_drbg_context ctr_drbg;
    mbedtls_ssl_context ssl;
    mbedtls_ssl_config conf;
    mbedtls_x509_crt srvcert;
    mbedtls_pk_context pkey;

    mbedtls_net_init( &listen_fd );
    mbedtls_net_init( &client_fd );
    mbedtls_ssl_init( &ssl );
    mbedtls_ssl_config_init( &conf );
    mbedtls_x509_crt_init( &srvcert );
    mbedtls_pk_init( &pkey );
    mbedtls_entropy_init( &entropy );
    mbedtls_ctr_drbg_init( &ctr_drbg );

    ret = mbedtls_x509_crt_parse( &srvcert, (const unsigned char *) mbedtls_test_srv_crt,
                          mbedtls_test_srv_crt_len );
    if( ret != 0 )
    {
        goto exit;
    }

    ret = mbedtls_x509_crt_parse( &srvcert, (const unsigned char *) mbedtls_test_cas_pem,
                          mbedtls_test_cas_pem_len );
    if( ret != 0 )
    {
        goto exit;
    }

    ret = mbedtls_pk_parse_key( &pkey, (const unsigned char *) mbedtls_test_srv_key,
                         mbedtls_test_srv_key_len, ((void*)0), 0 );
    if( ret != 0 )
    {
        goto exit;
    }

    if( ( ret = mbedtls_net_bind( &listen_fd, ((void*)0), "8888", MBEDTLS_NET_PROTO_TCP ) ) != 0 )
    {
        goto exit;
    }

    if( ( ret = mbedtls_ctr_drbg_seed( &ctr_drbg, mbedtls_entropy_func, &entropy,
                               (const unsigned char *) pers,
                               strlen( pers ) ) ) != 0 )
    {
        goto exit;
    }

    if( ( ret = mbedtls_ssl_config_defaults( &conf,
                    MBEDTLS_SSL_IS_SERVER,
                    MBEDTLS_SSL_TRANSPORT_STREAM,
                    MBEDTLS_SSL_PRESET_DEFAULT ) ) != 0 )
    {
        goto exit;
    }

    mbedtls_ssl_conf_rng( &conf, mbedtls_ctr_drbg_random, &ctr_drbg );


    mbedtls_ssl_conf_ca_chain( &conf, srvcert.next, ((void*)0) );
    if( ( ret = mbedtls_ssl_conf_own_cert( &conf, &srvcert, &pkey ) ) != 0 )
    {
        goto exit;
    }

    force_ciphersuite[0] = mbedtls_ssl_get_ciphersuite_id( "TLS-DHE-RSA-WITH-AES-256-GCM-SHA384" );
    force_ciphersuite[1] = 0;
    mbedtls_ssl_conf_ciphersuites( &conf, force_ciphersuite );

    if( ( ret = mbedtls_ssl_setup( &ssl, &conf ) ) != 0 )
    {
        goto exit;
    }

reset:

    mbedtls_net_free( &client_fd );

    mbedtls_ssl_session_reset( &ssl );

    if( ( ret = mbedtls_net_accept( &listen_fd, &client_fd,
                                    ((void*)0), 0, ((void*)0) ) ) != 0 )
    {
        goto exit;
    }

    sprintf(buf, "220 ok\n");
    ret = write_and_get_response( &client_fd, buf, sizeof(buf));

    if ( ret < 5 ) {
        goto exit;
    }

    if ( strncmp(buf, "EHLO ", 5) != 0 ) {
        goto exit;
    }

    sprintf(buf, "250-SIZE 157286400\n250-8BITMIME\n250-STARTTLS\n250-ENHANCEDSTATUSCODES\n250-PIPELINING\n250-CHUNKING\n250 SMTPUTF8\n");
    ret = write_and_get_response( &client_fd, buf, sizeof(buf));

    if ( ret < 8 ) {
        goto exit;
    }

    if ( strncmp(buf, "STARTTLS", 8) != 0 ) {
        goto exit;
    }
    sprintf(buf, "220 ok\n");
    ret = mbedtls_net_send( &client_fd, (unsigned char*)buf, strlen(buf) );
    if ( ret < 0 ) {
        goto exit;
    }

    mbedtls_ssl_set_bio( &ssl, &client_fd, mbedtls_net_send, mbedtls_net_recv, ((void*)0) );


    while( ( ret = mbedtls_ssl_handshake( &ssl ) ) != 0 )
    {
        if( ret != MBEDTLS_ERR_SSL_WANT_READ && ret != MBEDTLS_ERR_SSL_WANT_WRITE )
        {
            goto reset;
        }
    }

    while( ( ret = mbedtls_ssl_close_notify( &ssl ) ) < 0 )
    {
        if( ret != MBEDTLS_ERR_SSL_WANT_READ &&
            ret != MBEDTLS_ERR_SSL_WANT_WRITE )
        {
            goto reset;
        }
    }


    ret = 0;
    goto reset;

exit:

    mbedtls_net_free( &client_fd );
    mbedtls_net_free( &listen_fd );

    mbedtls_x509_crt_free( &srvcert );
    mbedtls_pk_free( &pkey );
    mbedtls_ssl_free( &ssl );
    mbedtls_ssl_config_free( &conf );
    mbedtls_ctr_drbg_free( &ctr_drbg );
    mbedtls_entropy_free( &entropy );

    return( ret );
}
